@@ -21,6 +21,9 @@ liblunar_gtk_la_LIBADD = 	\
 	$(LIBLUNAR_LIBS)	\
 	$(NULL)
 
+liblunar_gtk_la_LDFLAGS =  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) 
+
+
 liblunar_gtk_preload_includedir = $(includedir)/liblunar-1/lunar-gtk
 
 liblunar_gtk_preload_la_SOURCES = liblunar-gtk-preload.c
@@ -31,8 +34,10 @@ liblunar_gtk_preload_include_HEADERS =	\
 
 liblunar_gtk_preload_la_LIBADD = 	\
 	$(LIBLUNAR_LIBS)	\
-	$(srcdir)/liblunar-gtk.la	\
+	liblunar-gtk.la		\
 	-ldl			\
 	$(NULL)
+
+liblunar_gtk_preload_la_LDFLAGS =  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) 
 
 -include $(top_srcdir)/git.mk
